--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,7 +6,7 @@
 /*----------------------------------------*/
 .header {
   z-index: 10;
-  margin-bottom: -173px;
+  margin-bottom: -200px;
   padding-top: 55px;
   // .header__inner
   &__square
@@ -104,6 +104,7 @@
     align-items: center;
     justify-content: space-between;
     font-size: 16px;
+    gap: 20px;
   }
 
   // .header__sub-menu-logo
@@ -193,6 +194,13 @@
     font-size: 30px;
     line-height: 37px;
     margin-right: 81px;
+    cursor: pointer;
+
+    @include transition();
+
+    &:hover {
+      @include transform();
+    }
   }
 
   // .header__menu-text
@@ -203,7 +211,13 @@
     line-height: 24px;
     margin-right: 137px;
     max-width: 250px;
+    cursor: pointer;
 
+    @include transition();
+
+    &:hover {
+      @include transform();
+    }
   }
 
   // .header__menu-mail
@@ -218,9 +232,16 @@
 
     display: flex;
     align-items: center;
+    gap: 20px;
     font-weight: 400;
     line-height: 24px;
     margin-right: 80px;
+    cursor: pointer;
+    @include transition();
+
+    &:hover {
+      @include transform();
+    }
   }
 
   // .header__menu-phone
@@ -230,10 +251,18 @@
       height: 42px;
       margin-right: 19px;
     }
+
     display: flex;
     align-items: center;
+    gap: 20px;
     font-weight: 400;
     line-height: 24px;
+    cursor: pointer;
+    @include transition();
+
+    &:hover {
+      @include transform();
+    }
   }
 
   // .header__sub-menu
@@ -258,6 +287,18 @@
     line-height: 30px;
     display: flex;
     flex-direction: column;
+    @include transition();
+
+    &:hover {
+      @include transform();
+    }
+    &-square {
+      @include transition();
+
+      &:hover {
+        @include transform();
+      }
+    }
   }
 
   // .header__link
@@ -283,13 +324,21 @@
 }
 
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
 
 
   .header {
+    padding: 55px 30px 0 30px;
     &__menu {
-
-
+      &-logo {
+        margin-right: 30px;
+      }
+      &-text {
+        margin-right: 0;
+      }
+      &-mail {
+        margin-right: 30px;
+      }
     }
 
     &__sub-menu {
@@ -297,5 +346,18 @@
 
     }
   }
-
+  .footer {
+    padding: 55px 30px 0 30px;
+    &__menu {
+      &-logo {
+        margin-right: 30px;
+      }
+      &-text {
+        margin-right: 0;
+      }
+      &-mail {
+        margin-right: 30px;
+      }
+    }
+  }
 }
