--- a/app/scss/product-catalog-about.scss
+++ b/app/scss/product-catalog-about.scss
@@ -1,5 +1,8 @@
-.product-catalog {
 
+
+
+
+.product-catalog-about {
     display: flex;
     flex-direction: column;
     &__page {
@@ -9,7 +12,9 @@
     }
     
     &__top{
-        margin-bottom: 85px;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 46px;
     }
     // .product-catalog__page
 
@@ -32,31 +37,23 @@
     }
 
 
+.card {
 
-.card-list-catalog{
-    display: flex;
+        margin-right: 35px;
+        max-width: 270px;
+        padding: 31px 35px 38px;
+		// .card__img
 
-    margin-bottom: 120px;
-    &__card:not(:last-child){
-        margin-right:75px;
-      }
-    &__card{
-        align-items: center;
-        width: 230px;
-        
 		&__img {
-            margin-bottom: 30px;
+            margin-bottom: 36px;
 		}
 
 		// .card__title
 
 		&__title {
-            font-size: 16px;
-            line-height: 30px;
-            max-height: 400px;
-            color: #1D1717;
-            
-            
+            margin-bottom: 9px;
+            font-size: 20px;
+            line-height: 24px;
 		}
 
 		// .card__text
@@ -66,7 +63,6 @@
             font-size: 14px;
             line-height: 24px;
             margin-bottom: 20px;
-
 		}
 
 		// .card__link
@@ -81,6 +77,10 @@
                 color: #D82329;
             }
 		}
-    }
+}
+
+.card-list-catalog{
+    display: flex;
+    margin-bottom: 35px;
 }
 
