--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,8 @@
 @import "var";
 @import "index";
-@import "product-information";
 @import "product-catalog";
+@import "product-catalog-about";
+@import "spare_parts";
 
 /*----------------------------------------*/
 .header {
