--- a/app/scss/spare_parts.scss
+++ b/app/scss/spare_parts.scss
@@ -2,11 +2,18 @@
     color: rgb(0, 0, 0);
     &__top{
         display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
     &__input{
-        padding:  26px 295px 26px 73px;
+        
+        padding:  20px 70px 20px 70px;
         display: flex;
+        svg{
+            margin-right: 26px;
+        }
         input{
+            border: none;
             font-weight: 400;
             font-size: 20px;
             line-height: 24px;
@@ -23,7 +30,8 @@
         font-size: 20px;
         line-height: 24px;
         padding: 26px 240px 26px 240px;
-        background-color: #D82329;;
+        background-color: #D82329;
+        color: white;
     }
     &__{}
 
@@ -31,8 +39,5 @@
 
 .table{
 
-    &__card{
-        margin: 60px 0px;
-    }
     
 }
