--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,9 @@
   margin-bottom: -200px;
   padding-top: 55px;
   // .header__inner
+  &__mobile {
+    display: none;
+  }
   &__square
   &__inner {
     display: flex;
@@ -324,6 +327,44 @@
   padding: 0 375px 0 375px;
 }
 
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+  &__back {
+    transition: all 0.5s ease-in-out;
+  }
+  &__info {
+    transition: all 0.5s ease-in-out;
+    position: fixed;
+    top: 0;
+    right: -1000px;
+    padding: 35px 40px;
+    background-color: #3B4956;
+    opacity: 1;
+    width: 70%;
+    min-height: 600px;
+    z-index: 1001;
+  }
+  &.open {
+    .modal__back {
+      position: fixed;
+      top: 0;
+      left: 0;
+      background-color: black;
+      opacity: 0.6;
+      width: 100%;
+      height: 100%;
+      z-index: 1000;
+    }
+    .modal__info {
+      right: 0;
+    }
+  }
+}
 
 @media (max-width: 1200px) {
 
@@ -358,6 +399,67 @@
       }
       &-mail {
         margin-right: 30px;
+      }
+    }
+  }
+}
+
+@media (max-width: 930px) {
+  .header {
+    padding: 29px 5px 0 5px;
+    &__sub-menu {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+    }
+    &__inner {
+      display: none;
+    }
+    &__mobile {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+    }
+    &__left {
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+    }
+    &__right {
+      svg {
+        @include transition();
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+    }
+  }
+  .footer {
+    padding: 0 5px;
+    &__inner {
+      padding: 0 15px;
+    }
+    &__link {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 30px;
+    }
+    &__line {
+      height: 10px;
+      width: 80px;
+    }
+    &__menu {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      gap: 12px;
+    }
+    &__sub-menu {
+      flex-wrap: wrap;
+      &-item-square {
+        .sub-menu-item-square__title img{
+          display: none;
+        }
       }
     }
   }
