verstka product-about and adaptiv verstka-catalog-about

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,7 @@
 @import "product-catalog";
 @import "product-catalog-about";
 @import "spare_parts";
+@import "product-about";
 
 /*----------------------------------------*/
 .header {
