--- a/app/scss/product-catalog-about.scss
+++ b/app/scss/product-catalog-about.scss
@@ -5,11 +5,10 @@
 .product-catalog-about {
     display: flex;
     flex-direction: column;
-    &__page {
-        color: black;
-        font-size: 38px;
-        line-height: 65px;
-    }
+            color: black;
+            font-size: 38px;
+            line-height: 65px;
+    
     
     &__top{
         display: flex;
@@ -84,3 +83,25 @@
     margin-bottom: 35px;
 }
 
+@media (max-width: 950px) {
+    .card-list-catalog{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media (max-width: 660px) {
+    .product-catalog-about{
+        &__top{
+            flex-direction: column;
+            margin-bottom: 20px;
+            align-items: center;
+        }
+    }
+}
+@media (max-width: 520px) {
+
+    .card-list-catalog{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+}
