--- a/app/scss/product-about.scss
+++ b/app/scss/product-about.scss
@@ -5,8 +5,7 @@
 
   .name {
     margin-bottom: 100px;
-      display: flex;
-          // .name__img
+    display: flex;
   
           &__img {
         margin-right: 73px;
@@ -16,7 +15,10 @@
           // .name__info
   
           &__info {
-  max-width: 346px;
+            max-width: 346px;
+            display: flex;
+            flex-direction: column;
+            
           }
   
           // .name__title
@@ -57,4 +59,45 @@
   .document {
   
   }
-  
+  @media (max-width: 1140px) {
+    .name {
+      flex-direction: column;
+      align-items: center;
+      &__info{
+        margin-bottom: 30px;
+        max-width: 100%;
+        padding: 0px 50px ;
+        align-items: center;
+      }
+      &__img{
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
+      &__title{
+        font-size: 50px;
+        max-width: 1140px;
+      }
+      &__text{
+        font-size: 20px;
+      }
+    }
+    .images{
+        flex-direction: column;
+        
+    }
+}
+
+
+
+@media (max-width: 360px) {
+  .name {
+
+    &__info{
+      max-width: 100%;
+      padding: 0px 10px;
+    }
+    &__button{
+      padding: 20px 70px;
+    }
+}
+}
