--- a/app/scss/product-catalog-about.scss
+++ b/app/scss/product-catalog-about.scss
@@ -84,9 +84,10 @@
 }
 
 @media (max-width: 950px) {
-    .card-list-catalog{
+    .card-list-catalog-about{
         display: grid;
         grid-template-columns: repeat(2,1fr);
+        justify-items: center; 
     }
 }
 @media (max-width: 660px) {
@@ -100,8 +101,15 @@
 }
 @media (max-width: 520px) {
 
-    .card-list-catalog{
+    .card-list-catalog-about{
         display: grid;
         grid-template-columns: repeat(1,1fr);
+        justify-items: center; 
+    }
+}
+@media (max-width: 360px) {
+
+    .card-list-catalog-about{
+
     }
 }
