--- a/app/scss/product-catalog.scss
+++ b/app/scss/product-catalog.scss
@@ -26,14 +26,14 @@
         display: flex;
         align-items: center;
     }
-    &__arrow{
-        margin-right: 30px;
-    }
+
     }
 
 
 
 .card-list-catalog{
+
+    /*
     display: flex;
 
     margin-bottom: 120px;
@@ -82,5 +82,14 @@
             }
 		}
     }
+    */
 }
 
+.catalog-card{
+    &__img{
+
+    }
+    &__title{
+
+    }
+}
