--- a/app/scss/product-catalog.scss
+++ b/app/scss/product-catalog.scss
@@ -1,95 +1,96 @@
-.product-catalog {
 
+
+
+.product-catalog {
     display: flex;
     flex-direction: column;
-
         color: black;
         font-size: 38px;
         line-height: 65px;
-
     
     &__top{
         margin-bottom: 85px;
     }
-    // .product-catalog__page
+		// .product-catalog__wrapper
 
-
-    &__go-back{
-        font-size: 18px;
-        line-height: 65px;
-    }
-    &__card-list-catalog {
-        margin-bottom: 35px;
-        display: flex
-    }
-    &__go-back{
-        display: flex;
-        align-items: center;
-    }
-
-    }
-
-
-
-.card-list-catalog{
-
-    /*
-    display: flex;
-
-    margin-bottom: 120px;
-    &__card:not(:last-child){
-        margin-right:75px;
-      }
-    &__card{
-        align-items: center;
-        width: 230px;
-        
-		&__img {
-            margin-bottom: 30px;
+		&__wrapper {
 		}
 
-		// .card__title
+		// .product-catalog__card-lists
+
+		&__card-lists {
+			display: grid;
+			grid-template-columns: repeat(4,1fr);
+			justify-items: center; 
+
+			
+		}
+
+		// .product-catalog__card
+
+		&__card {
+		}
+}
+.product-catalog-card {
+	display: flex;
+	flex-direction: column;
+		max-width: 230px;
+		// .product-catalog-card__img
+
+		&__img {
+			
+            object-fit:fill;
+			
+		}
+
+		// .product-catalog-card__title
 
 		&__title {
             font-size: 16px;
             line-height: 30px;
-            max-height: 400px;
-            color: #1D1717;
-            
-            
 		}
-
-		// .card__text
-
-		&__text {
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 24px;
-            margin-bottom: 20px;
-
-		}
-
-		// .card__link
-
-		&__link {
-            text-decoration-line:underline;
-            text-decoration-color: red;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 20px;
-            a{
-                color: #D82329;
-            }
-		}
-    }
-    */
 }
 
-.catalog-card{
-    &__img{
+@media (max-width: 950px) {
 
-    }
-    &__title{
+    .product-catalog{
+		
+		&__card-lists{
+			gap: 30px;
+			grid-template-columns: repeat(2, 1fr);
 
-    }
+		}
+		&__top{
+
+			text-align: center;
+			margin-bottom: 95px;
+		}
+	}
+	.product-catalog-card{
+		&__title{
+			font-size: 25px;
+		}
+	}
 }
+
+@media (max-width: 560px) {
+	.product-catalog-card {
+		max-width: 100%;
+		align-items: center;
+		margin-bottom: 30px;
+	}
+    .product-catalog{
+		grid-template-columns: repeat(1, 1fr);
+		
+
+		&__card-lists{
+			grid-template-columns: repeat(1, 1fr);
+			max-width: 100%;
+			padding: 0px 20px;
+		}
+
+}
+}
+
+
+
