fix some trouble

--- a/app/components/index/about-big-company-block.html
+++ b/app/components/index/about-big-company-block.html
@@ -1,4 +1,4 @@
-<section class="main-about-big">
+<section class="main-about-big page-padding__left">
     <div class="main-about-big__title">
         Больше о компании
     </div>
