--- a/app/components/index/help-block.html
+++ b/app/components/index/help-block.html
@@ -1,5 +1,5 @@
 <section class="main-help">
-    <div class="main-help__container2">
+    <div class="main-help__container2 page-padding">
         <div class="main-help__info">
             <div class="main-help__title">Помощь заказчикам
                 в реализации строительных
