--- a/app/components/index/main-category-block.html
+++ b/app/components/index/main-category-block.html
@@ -1,4 +1,4 @@
-<section class="main-category">
+<section class="main-category page-padding__left">
     <div class="main-category__top">
         <h3>Категории товаров</h3>
         <a>Перейти в каталог категорий</a>
