--- a/app/components/index/main-spare-block.html
+++ b/app/components/index/main-spare-block.html
@@ -1,5 +1,5 @@
-<section class="main-spare">
-  <div class="main-spare__container_max">
+<section class="main-spare page-padding">
+  <div class="main-spare__container">
     <img class="main-spare__img_back" src="../img/spare/01.png" alt="">
     <div class="main-spare__img">
       <img src="../img/spare/01.png" alt="">
