--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header page-padding">
     <div class="header__inner">
         <div class="header__menu">
             <div class="header__menu-logo">Logotype</div>
