--- a/app/components/index/about-company-block.html
+++ b/app/components/index/about-company-block.html
@@ -1,4 +1,4 @@
-<section class="card-list">
+<section class="card-list page-padding">
     <div class="card-list__item item">
         <div class="item__up">
             <div class="item__logo">
@@ -77,7 +77,7 @@
         </div>
     </div>
 </section>
-<section class="main-about">
+<section class="main-about page-padding">
     <div class="main-about__doc">
         <img src="../img/about/01.png" alt="">
     </div>
@@ -85,12 +85,12 @@
         <div class="main-about__title">О компании</div>
         <div class="main-about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
         <div class="main-about__text">
-                            <span>
-                                Осуществляем поставку оборудования, запасных частей и расходных материалов итальянского производителя TECNIWELL, в Россию, Африку, Европу и страны СНГ. <br><br>
-                                Консультируем и подбираем оборудование, согласно поставленным задачам.<br><br>
-                                Доставляем технику и расходные материалы до пункта назначения, не обременяя Клиента логистическими и таможенными формальностями.<br><br>
-                                Сопровождаем оборудование в пост продажном обслуживании
-                            </span>
+            <span>
+                Осуществляем поставку оборудования, запасных частей и расходных материалов итальянского производителя TECNIWELL, в Россию, Африку, Европу и страны СНГ. <br><br>
+                Консультируем и подбираем оборудование, согласно поставленным задачам.<br><br>
+                Доставляем технику и расходные материалы до пункта назначения, не обременяя Клиента логистическими и таможенными формальностями.<br><br>
+                Сопровождаем оборудование в пост продажном обслуживании
+            </span>
         </div>
     </div>
 </section>
