--- a/app/components/index/main-block.html
+++ b/app/components/index/main-block.html
@@ -1,5 +1,5 @@
 <div class="main__img">
-    <section class="main-application">
+    <section class="main-application page-padding">
         <div class="main-application__title">ОФИЦИАЛЬНЫЙ
             ДИЛЕР TECNIWELL
             НА ТЕРРИТОРИИ
@@ -11,26 +11,24 @@
         <a class="main-application__button">Оставить заявку</a>
     </section>
     <section class="main-experience">
-        <div class="container_max">
-            <div class="main-experience__inner">
-                <div class="main-experience__left">
-                    <div class="main-experience__title">
-                        <div class="main-experience__numbers">20 лет</div>
-                        <div class="main-experience__plus">
-                            +
-                        </div>
-                    </div>
-                    <div class="main-experience__sub-title">
-                        Компания на рынке
+        <div class="main-experience__inner page-padding">
+            <div class="main-experience__left">
+                <div class="main-experience__title">
+                    <div class="main-experience__numbers">20 лет</div>
+                    <div class="main-experience__plus">
+                        +
                     </div>
                 </div>
-                <div class="main-experience__right">
-                    <div class="main-experience__text">Наша компания находится на рынке более 20 лет. Мы
-                        единственный
-                        официальный дилер в РФ и СНГ. Наша компания качественно
-                        выполняет любые поставленные задачи и предоставляет гибкие
-                        условия для постоянных клиентов.
-                    </div>
+                <div class="main-experience__sub-title">
+                    Компания на рынке
+                </div>
+            </div>
+            <div class="main-experience__right">
+                <div class="main-experience__text">Наша компания находится на рынке более 20 лет. Мы
+                    единственный
+                    официальный дилер в РФ и СНГ. Наша компания качественно
+                    выполняет любые поставленные задачи и предоставляет гибкие
+                    условия для постоянных клиентов.
                 </div>
             </div>
         </div>
