--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -119,7 +119,7 @@
   }
 
   &-help {
-    padding: 77px 0 34px 0;
+    padding: 77px 0;
     display: flex;
     background-color: #3B4956;
     // .help__info
@@ -134,7 +134,6 @@
     &__title {
       font-size: 38px;
       line-height: 50px;
-      margin-top: 30px;
       margin-bottom: 40px;
     }
 
@@ -154,42 +153,46 @@
     &__img {
       cursor: pointer;
       @include transition();
-
       &:hover {
         @include transform();
+      }
+
+      img {
+        max-height: 280px;
+        min-height: 280px;
+        min-width: 360px;
       }
     }
   }
 
   &-spare {
-    &__container_max {
+    width: 100%;
+    background-color: #3B4956;
+
+    &__container {
+      margin-bottom: 88px;
+      // .spare__img
+      margin-top: 100px;
+      padding: 114px 0 114px 0;
       display: flex;
-      max-width: 1200px;
-      width: 100%;
-      margin: 0 auto;
-      padding: 0;
       align-items: center;
       position: relative;
     }
-
-    margin-bottom: 88px;
-    background-color: #3B4956;
-
-    // .spare__img
-    margin-top: 100px;
-    padding: 114px 0 114px 0px;
-    display: flex;
-
     &__img {
       margin-right: 154px;
       height: 374px;
       z-index: 10;
 
+      img {
+        min-height: 350px;
+        object-fit: cover;
+      }
+
       &_back {
         position: absolute;
-        top: 45px;
+        top: 30%;
         left: 0;
-        margin-left: -200px;
+        margin-left: -100px;
         height: 283px;
         opacity: 0.5;
       }
@@ -381,7 +384,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
 
     &__button {
       display: none;
@@ -392,7 +395,7 @@
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      padding: 72px 150px 30px 0;
+      padding: 72px 0 30px 0;
       max-width: 1200px;
       width: 100%;
 
@@ -490,7 +493,6 @@
     }
 
     &__card-helper {
-      padding-left: calc(17% - 100px);
       position: relative;
       display: flex;
       justify-content: end;
@@ -608,8 +610,9 @@
 
 .main-help {
   &__container2 {
+    width: 100%;
     display: flex;
-    margin: 0 auto;
+    justify-content: space-between;
     align-items: center;
   }
 }
@@ -630,7 +633,7 @@
     }
 
     &-help {
-      padding: 34px 30px;
+      padding: 34px 0;
     }
 
     &-category__top {
@@ -642,10 +645,6 @@
 
       &__img {
         margin-right: 50px;
-
-        &_back {
-          top: 80px;
-        }
       }
     }
 
