--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,7 +2,7 @@
 @import "index";
 @import "product-catalog";
 @import "product-catalog-about";
-@import "spare_parts";
+@import "spare-parts";
 @import "product-about";
 
 /*----------------------------------------*/
