--- a/app/components/index/main-category-block.html
+++ b/app/components/index/main-category-block.html
@@ -1,48 +1,50 @@
 <section class="main-category page-padding__left">
-    <div class="main-category__top">
+    <div class="main-category__top page-padding__right">
         <h3>Категории товаров</h3>
         <a>Перейти в каталог категорий</a>
     </div>
-    <div class="main-category__card-helper">
-        <div class="main-category__card-opacity"></div>
-        <div class="main-category__card-list">
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
-            <a href="" class="main-category__card">
-                <img src="../img/card/0.png" alt="">
-                <p class="">Триплексные насосы</p>
-            </a>
+    <div class="main-category__card-helper__wrapper">
+        <div class="main-category__card-helper">
+            <div class="main-category__card-opacity"></div>
+            <div class="main-category__card-list">
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
+                <a href="" class="main-category__card">
+                    <img src="../img/card/0.png" alt="">
+                    <p class="">Триплексные насосы</p>
+                </a>
 
+            </div>
         </div>
     </div>
     <a class="main-category__button">Перейти в каталог категорий</a>
