--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,9 +1,8 @@
-<header class="header page-padding">
+<header class="header page-padding @@class">
     <div class="header__inner">
         <div class="header__menu">
-            <div class="header__menu-logo">Logotype</div>
-            <div class="header__menu-text">
-                <p>Оборудование для струйной цементации и бурения</p>
+            <div class="header__menu-logo">
+                <img src="img/header/logo.svg" alt="">
             </div>
             <div class="header__menu-mail">
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -47,9 +46,9 @@
             </div>
         </nav>
     </div>
-    <div class="header__mobile">
+    <div class="header__mobile page-padding">
         <div class="header__left">
-            <div class="header__menu-logo">Logotype</div>
+            <div class="header__menu-logo"><img src="img/header/logo.svg" alt=""></div>
             <div class="header__menu-mail">
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M27.4 14.6001C27.8243 14.6001 28.2313 14.7687 28.5314 15.0687C28.8314 15.3688 29 15.7758 29 16.2001V25.8001C29 26.2244 28.8314 26.6314 28.5314 26.9315C28.2313 27.2315 27.8243 27.4001 27.4 27.4001H14.6C14.1757 27.4001 13.7687 27.2315 13.4686 26.9315C13.1686 26.6314 13 26.2244 13 25.8001V16.2001C13 15.3201 13.72 14.6001 14.6 14.6001H27.4ZM23.904 21.8801L29 25.8001V24.2001L24.904 21.0801L29 17.8001V16.2001L21 22.6001L13 16.2001V17.8001L17.096 21.0801L13 24.2001V25.8001L18.096 21.8801L21 24.2001L23.904 21.8801Z"
