--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,6 +1,6 @@
-<footer class="footer page-padding">
+<footer class="footer page-padding @@class">
     <div class="footer__menu">
-        <div class="footer__menu-logo"><img src="img/footer/logo-footer.svg" alt=""></div>
+        <a href="/" class="footer__menu-logo"><img src="img/footer/logo-footer.svg" alt=""></a>
         <div class="footer__menu-mail">
             <svg width="43" height="43" viewBox="0 0 43 43" fill="none"
                  xmlns="http://www.w3.org/2000/svg">
