--- a/app/components/index/about-company-block.html
+++ b/app/components/index/about-company-block.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 </section>
-<section class="main-about page-padding">
+<section id="@@idScroll" class="main-about page-padding">
     <div class="main-about__doc">
         <img src="../img/about/01.png" alt="">
     </div>
