--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -96,9 +96,6 @@
       color: #1D1717;
       margin-bottom: 19px;
     }
-
-    // .about__name
-
     &__name {
       font-size: 38px;
       line-height: 56px;
@@ -984,5 +981,9 @@
     max-height: 200px;
     min-height: 200px;
     min-width: 280px;
+  }
+  .main-experience__left {
+    gap: 8vw;
+    flex-wrap: wrap;
   }
 }
