--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,17 @@
 @import "product-about";
 
 /*----------------------------------------*/
+.splitter {
+  width: 100%;
+  opacity: 0.4;
+  border: 1px solid #202122;
+
+  &__white {
+    opacity: 0.4;
+    border: 1px solid #FFFFFF;
+  }
+}
+
 .header {
   z-index: 10;
   padding-top: 55px;
@@ -138,6 +149,7 @@
   // .header__sub-menu-item
 
   &__sub-menu-item {
+    width: 100%;
     font-weight: 500;
     font-size: 16px;
     line-height: 30px;
@@ -151,6 +163,7 @@
   }
 
   &__sub-menu-item-square {
+    width: 100%;
     display: flex;
     flex-direction: column;
     @include transition();
@@ -179,7 +192,8 @@
 
 .header-black {
   z-index: 10;
-  padding-top: 55px;
+  margin-top: 55px;
+  margin-bottom: 80px;
   width: 100%;
 
   &__mobile {
@@ -189,24 +203,17 @@
   &__inner {
     display: flex;
   }
-
-  // .header__menu
-
   &__menu {
     display: flex;
     align-items: center;
     margin-bottom: 37px;
-
   }
-
   &__email {
     color: black;
   }
   &__phone {
     color: black;
   }
-  // .header__menu-logo
-
   &__menu-logo {
     font-size: 30px;
     line-height: 37px;
@@ -218,9 +225,6 @@
       @include transform();
     }
   }
-
-  // .header__menu-text
-
   &__menu-text {
     font-weight: 400;
     font-size: 14px;
@@ -234,9 +238,6 @@
       @include transform();
     }
   }
-
-  // .header__menu-mail
-
   &__menu-mail {
     color: #000;
 
@@ -256,9 +257,8 @@
       @include transform();
     }
   }
-
-
   &__menu-phone {
+    color: #000;
     display: flex;
     align-items: center;
     font-weight: 400;
@@ -278,10 +278,11 @@
       height: 42px;
       margin-right: 19px;
     }
+
+    a {
+      color: #000;
+    }
   }
-
-  // .header__sub-menu
-
   &__sub-menu {
     display: flex;
     align-items: center;
@@ -289,15 +290,10 @@
     font-size: 16px;
     gap: 20px;
   }
-
-  // .header__sub-menu-logo
-
   &__sub-menu-logo {
   }
-
-  // .header__sub-menu-item
-
   &__sub-menu-item {
+    width: 100%;
     font-weight: 500;
     font-size: 16px;
     line-height: 30px;
@@ -313,10 +309,10 @@
       color: black;
     }
   }
-
   &__sub-menu-item-square {
     display: flex;
     flex-direction: column;
+    width: 100%;
     @include transition();
 
     &:hover {
@@ -327,19 +323,13 @@
       color: black;
     }
   }
-
-  // .header__link
-
   &__link {
+    a {
+      color: #000!important;
+    }
   }
-
-  // .header__line
-
   &__line {
   }
-
-  // .header__menu-item
-
   &__menu-item {
 
   }
@@ -368,13 +358,9 @@
   &__menu {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin-bottom: 20px;
   }
-
-  &__sub-menu {
-    padding-bottom: 50px;
-  }
-
   &__menu-logo {
     font-size: 30px;
     line-height: 37px;
@@ -387,7 +373,6 @@
       @include transform();
     }
   }
-
   &__menu-text {
     font-weight: 400;
     font-size: 14px;
@@ -402,9 +387,6 @@
       @include transform();
     }
   }
-
-  // .header__menu-mail
-
   &__menu-mail {
     color: #FFFFFF;
 
@@ -426,9 +408,6 @@
       @include transform();
     }
   }
-
-  // .header__menu-phone
-
   &__menu-phone {
     img {
       height: 42px;
@@ -447,24 +426,18 @@
       @include transform();
     }
   }
-
-  // .header__sub-menu
-
   &__sub-menu {
+    padding-bottom: 50px;
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
+    gap: 50px;
     font-size: 16px;
   }
-
-  // .header__sub-menu-logo
-
   &__sub-menu-logo {
   }
-
-  // .header__sub-menu-item
-
   &__sub-menu-item {
+    width: 100%;
     font-weight: 500;
     font-size: 16px;
     line-height: 30px;
@@ -483,19 +456,24 @@
       }
     }
   }
+  &__sub-menu-item-square {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    @include transition();
 
-  // .header__link
+    &:hover {
+      @include transform();
+    }
 
+    a {
+      color: black;
+    }
+  }
   &__link {
   }
-
-  // .header__line
-
   &__line {
   }
-
-  // .header__menu-item
-
   &__menu-item {
   }
 }
@@ -509,6 +487,7 @@
 }
 
 .modal {
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
@@ -523,7 +502,7 @@
     position: fixed;
     top: 0;
     right: -2000px;
-    padding: 35px 40px;
+    padding: 35px 30% 35px 40px;
     background-color: #3B4956;
     opacity: 1;
     width: 70%;
@@ -572,6 +551,12 @@
 }
 
 @media (max-width: 1600px) {
+  .header__sub-menu{
+    gap: 50px;
+  }
+  .footer__sub-menu{
+    gap: 50px;
+  }
   .page-padding {
     padding: 0 120px;
     &__left {
@@ -584,6 +569,13 @@
 }
 
 @media (max-width: 1400px) {
+  .header__sub-menu{
+    gap: 30px;
+  }
+
+  .footer__sub-menu{
+    gap: 30px;
+  }
   .page-padding {
     padding: 0 75px;
     &__left {
@@ -596,6 +588,12 @@
 }
 
 @media (max-width: 1200px) {
+  .header__sub-menu{
+    gap: 20px;
+  }
+  .footer__sub-menu{
+    gap: 20px;
+  }
   .header {
     &__menu {
       &-logo {
@@ -639,7 +637,19 @@
       padding-right: 30px;
     }
   }
-  .header {
+  .footer__sub-menu{
+    gap: 15px;
+  }
+
+  .footer__sub-menu-item{
+    //max-width: 150px;
+    width: max-content;
+  }
+  .footer__sub-menu-item-square{
+    //max-width: 150px;
+    width: max-content;
+  }
+  .header, .header-black {
     &__sub-menu {
       display: flex;
       flex-direction: column;
@@ -651,12 +661,19 @@
     &__mobile {
       display: flex;
       width: 100%;
+      gap: 4vw;
       justify-content: space-between;
+    }
+    &__menu-logo {
+      max-width: 75vw;
     }
     &__left {
       display: flex;
       flex-direction: column;
       gap: 25px;
+    }
+    &__menu-logo, &__menu-mail {
+      margin-right: 0;
     }
     &__right {
       svg {
@@ -683,7 +700,7 @@
     &__menu {
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: center;
       gap: 12px;
     }
     &__sub-menu {
@@ -707,6 +724,9 @@
       padding-right: 15px;
     }
   }
+  .modal__info {
+    padding: 35px 10% 35px 40px;
+  }
   .main-about__doc {
     display: contents;
     margin-right: 0;
@@ -714,6 +734,9 @@
 }
 
 @media (max-width: 480px) {
+  .modal__info {
+    padding: 35px 20px 35px 30px;
+  }
   .page-padding {
     padding: 0 5px;
     &__left {
