--- a/app/scss/product-about.scss
+++ b/app/scss/product-about.scss
@@ -1,103 +1,110 @@
-.product-about-wrapper{
+.product-about-wrapper {
 
-    color: black;
-  }
-
-  .name {
-    margin-bottom: 100px;
-    display: flex;
-  
-          &__img {
-        margin-right: 73px;
-        height: 100%;
-          }
-  
-          // .name__info
-  
-          &__info {
-            max-width: 346px;
-            display: flex;
-            flex-direction: column;
-            
-          }
-  
-          // .name__title
-  
-          &__title {
-        font-size: 38px;
-        line-height: 46px;
-        margin-bottom: 36px;
-          }
-  
-          // .name__text
-  
-          &__text {
-        font-weight: 400;
-  font-size: 16px;
-  line-height: 26px;
-  margin-bottom: 48px;
-          }
-  
-          // .name__button
-  
-          &__button {
-      background-color: #D82329;
-      padding: 20px 77px 20px 77px ;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 30px;
-      border-radius: 5px;
-      display: block;
-      max-width: 329px;
-          }
-  }
-  .images {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 53px;
-  }
-  .document {
-  
-  }
-  @media (max-width: 1140px) {
-    .name {
-      flex-direction: column;
-      align-items: center;
-      &__info{
-        margin-bottom: 30px;
-        max-width: 100%;
-        padding: 0px 50px ;
-        align-items: center;
-      }
-      &__img{
-        margin-right: 0;
-        margin-bottom: 20px;
-      }
-      &__title{
-        font-size: 50px;
-        max-width: 1140px;
-      }
-      &__text{
-        font-size: 20px;
-      }
-    }
-    .images{
-        flex-direction: column;
-        
-    }
+  color: black;
+  padding-bottom: 40px;
 }
 
+.name {
+  margin-bottom: 100px;
+  display: flex;
+
+  &__img {
+    margin-right: 73px;
+    height: 100%;
+  }
+
+  // .name__info
+
+  &__info {
+    max-width: 346px;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  // .name__title
+
+  &__title {
+    font-size: 38px;
+    line-height: 46px;
+    margin-bottom: 36px;
+  }
+
+  // .name__text
+
+  &__text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 48px;
+  }
+
+  // .name__button
+
+  &__button {
+    background-color: #D82329;
+    padding: 20px 77px 20px 77px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 30px;
+    border-radius: 5px;
+    display: block;
+    max-width: 329px;
+  }
+}
+
+.images {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 53px;
+}
+
+.document {
+
+}
+
+@media (max-width: 1140px) {
+  .name {
+    flex-direction: column;
+    align-items: center;
+
+    &__info {
+      margin-bottom: 30px;
+      max-width: 100%;
+      padding: 0px 50px;
+      align-items: center;
+    }
+
+    &__img {
+      margin-right: 0;
+      margin-bottom: 20px;
+    }
+
+    &__title {
+      font-size: 50px;
+      max-width: 1140px;
+    }
+
+    &__text {
+      font-size: 20px;
+    }
+  }
+  .images {
+    flex-direction: column;
+  }
+}
 
 
 @media (max-width: 360px) {
   .name {
 
-    &__info{
+    &__info {
       max-width: 100%;
       padding: 0px 10px;
     }
-    &__button{
+
+    &__button {
       padding: 20px 70px;
     }
-}
+  }
 }
