--- a/app/scss/product-catalog-about.scss
+++ b/app/scss/product-catalog-about.scss
@@ -1,124 +1,142 @@
-
-
-
-
+@import 'app/scss/var';
 .product-catalog-about {
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-size: 38px;
+  line-height: 65px;
+
+  &__card-list {
     display: flex;
-    flex-direction: column;
-            color: black;
-            font-size: 38px;
-            line-height: 65px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+    margin-bottom: 35px;
+  }
 
-            &__card-list{
-                display: flex;
-                margin-bottom: 35px;
-            }
-    
-    &__top{
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 46px;
-    }
-    // .product-catalog__page
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 46px;
+  }
+
+  // .product-catalog__page
 
 
-    &__go-back{
-        font-size: 18px;
-        line-height: 65px;
+  &__go-back {
+    font-size: 18px;
+    line-height: 65px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    @include transition();
+    &:hover {
+      @include transform()
     }
-    &__card-list-catalog {
-        margin-bottom: 35px;
-        display: flex
-    }
-    &__go-back{
-        display: flex;
-        align-items: center;
-    }
-    &__arrow{
-        margin-right: 30px;
-    }
-    }
+  }
+
+  &__card-list-catalog {
+    margin-bottom: 35px;
+    display: flex
+  }
+
+  &__arrow {
+    margin-right: 30px;
+  }
+}
 
 
 .card {
+  margin-right: 35px;
+  max-width: 270px;
+  padding: 31px 35px 38px;
 
-        margin-right: 35px;
-        max-width: 270px;
-        padding: 31px 35px 38px;
-		// .card__img
+  background: #FFFFFF;
+  box-shadow: 4px 4px 20px 10px rgba(210, 210, 210, 0.25);
+  cursor: pointer;
+  @include transition();
+  &:hover {
+    @include transform()
+  }
 
-		&__img {
-            margin-bottom: 36px;
-		}
+  &__img {
+    margin-bottom: 36px;
+  }
 
-		// .card__title
+  // .card__title
 
-		&__title {
-            margin-bottom: 9px;
-            font-size: 20px;
-            line-height: 24px;
-		}
+  &__title {
+    margin-bottom: 9px;
+    font-size: 20px;
+    line-height: 24px;
+  }
 
-		// .card__text
+  // .card__text
 
-		&__text {
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 24px;
-            margin-bottom: 20px;
-		}
+  &__text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 20px;
+  }
 
-		// .card__link
+  // .card__link
 
-		&__link {
-            text-decoration-line:underline;
-            text-decoration-color: red;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 20px;
-            a{
-                color: #D82329;
-            }
-		}
+  &__link {
+    text-decoration-line: underline;
+    text-decoration-color: red;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+
+    a {
+      color: #D82329;
+    }
+  }
 }
 
-.card-list-catalog{
-    display: flex;
-    margin-bottom: 35px;
+.card-list-catalog {
+  display: flex;
+  margin-bottom: 35px;
 }
 
 @media (max-width: 950px) {
-    .product-catalog-about{
-    &__card-list{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        justify-items: center; 
-    }}
-}
-@media (max-width: 660px) {
-    .product-catalog-about{
-        &__top{
-            flex-direction: column;
-            margin-bottom: 53px;
-            align-items: center;
-        }
-        &__go-back{
-            display: none;
-        }
+  .product-catalog-about {
+    &__card-list {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-items: center;
     }
+  }
 }
+
+@media (max-width: 660px) {
+  .product-catalog-about {
+    &__top {
+      flex-direction: column;
+      margin-bottom: 53px;
+      align-items: center;
+    }
+
+    &__go-back {
+      display: none;
+    }
+  }
+}
+
 @media (max-width: 520px) {
 
-    .product-catalog-about{
-        &__card-list{
-            grid-template-columns: repeat(1,1fr);
-        }}
+  .product-catalog-about {
+    &__card-list {
+      grid-template-columns: repeat(1, 1fr);
     }
+  }
+}
 
 @media (max-width: 360px) {
 
-    .card-list-catalog-about{
-        font-size: 32px;
-        line-height: 65px;
-    }
+  .card-list-catalog-about {
+    font-size: 32px;
+    line-height: 65px;
+  }
 }
