--- a/app/scss/product-catalog.scss
+++ b/app/scss/product-catalog.scss
@@ -1,95 +1,97 @@
 
-
-
 .product-catalog {
-    display: flex;
-    flex-direction: column;
-        color: black;
-        font-size: 38px;
-        line-height: 65px;
-    
-    &__top{
-        margin-bottom: 85px;
-    }
-		// .product-catalog__wrapper
+  display: flex;
+  flex-direction: column;
+  color: black;
+  font-size: 38px;
+  line-height: 65px;
+  padding-bottom: 100px;
 
-		&__wrapper {
-		}
+  &__top {
+    margin-bottom: 85px;
+  }
 
-		// .product-catalog__card-lists
+  // .product-catalog__wrapper
 
-		&__card-lists {
-			display: grid;
-			grid-template-columns: repeat(4,1fr);
-			justify-items: center; 
+  &__wrapper {
+  }
 
-			
-		}
+  // .product-catalog__card-lists
 
-		// .product-catalog__card
+  &__card-lists {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
 
-		&__card {
-		}
+
+  }
+
+  // .product-catalog__card
+
+  &__card {
+  }
 }
+
 .product-catalog-card {
-	display: flex;
-	flex-direction: column;
-		max-width: 230px;
-		// .product-catalog-card__img
+  display: flex;
+  flex-direction: column;
+  max-width: 230px;
+  // .product-catalog-card__img
 
-		&__img {
-			
-            object-fit:fill;
-			
-		}
+  &__img {
 
-		// .product-catalog-card__title
+    object-fit: fill;
 
-		&__title {
-            font-size: 16px;
-            line-height: 30px;
-		}
+  }
+
+  // .product-catalog-card__title
+
+  &__title {
+    font-size: 16px;
+    line-height: 30px;
+  }
 }
 
 @media (max-width: 950px) {
 
-    .product-catalog{
-		
-		&__card-lists{
-			gap: 30px;
-			grid-template-columns: repeat(2, 1fr);
+  .product-catalog {
 
-		}
-		&__top{
+    &__card-lists {
+      gap: 30px;
+      grid-template-columns: repeat(2, 1fr);
 
-			text-align: center;
-			margin-bottom: 95px;
-		}
-	}
-	.product-catalog-card{
-		&__title{
-			font-size: 25px;
-		}
-	}
+    }
+
+    &__top {
+
+      text-align: center;
+      margin-bottom: 95px;
+    }
+  }
+  .product-catalog-card {
+    &__title {
+      font-size: 25px;
+    }
+  }
 }
 
 @media (max-width: 560px) {
-	.product-catalog-card {
-		max-width: 100%;
-		align-items: center;
-		margin-bottom: 30px;
-	}
-    .product-catalog{
-		grid-template-columns: repeat(1, 1fr);
-		
+  .product-catalog-card {
+    max-width: 100%;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  .product-catalog {
+    grid-template-columns: repeat(1, 1fr);
 
-		&__card-lists{
-			grid-template-columns: repeat(1, 1fr);
-			max-width: 100%;
-			padding: 0px 20px;
-		}
 
-}
+    &__card-lists {
+      grid-template-columns: repeat(1, 1fr);
+      max-width: 100%;
+      padding: 0px 20px;
+    }
+
+  }
 }
 
 
