--- a/app/scss/spare-parts.scss
+++ b/app/scss/spare-parts.scss
@@ -1,5 +1,8 @@
+@import "app/scss/var";
+
 .spare-parts-page {
     color: rgb(0, 0, 0);
+    margin-bottom: 120px;
     &__top{
         display: flex;
         justify-content: space-between;
@@ -8,32 +11,43 @@
 
     }
     &__input{
-        
-        padding:  20px 70px 20px 70px;
+        padding:  26px 70px 26px 70px;
         display: flex;
+        background: #F2F2F2;
+        width: 100%;
+        margin-right: 26px;
         svg{
             margin-right: 26px;
         }
         input{
+            width: 100%;
             border: none;
             font-weight: 400;
             font-size: 20px;
             line-height: 24px;
             outline:none;
+            background: #F2F2F2;
         }
-        margin-right: 26px;
     }
     &__filter{
         svg{
             margin-right: 21px;
         }
         display: flex;
+        justify-content: center;
         font-weight: 400;
         font-size: 20px;
         line-height: 24px;
-        padding: 26px 240px 26px 240px;
+        width: 100%;
+        padding: 26px;
         background-color: #D82329;
         color: white;
+
+        cursor: pointer;
+        @include transition();
+        &:hover {
+            @include transformS(1.01);
+        }
     }
     // .spare-parts-page__wrapper
 
