--- a/app/components/header-black.html
+++ b/app/components/header-black.html
@@ -90,7 +90,7 @@
         <nav class="header-black__sub-menu">
             <div class="header-black__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
-                    <img src="../img/header-black/03.png" alt="">
+                    <img src="img/header-black/03.png" alt="">
                     <a href="" class="header-black__link">Главная</a>
                 </div>
                 <div class="splitter__white"></div>
