--- a/app/components/header.html
+++ b/app/components/header.html
@@ -85,7 +85,7 @@
         <nav class="header__sub-menu">
             <div class="header__sub-menu-item-square">
                 <div class="sub-menu-item-square__title">
-                    <img src="../img/header/03.png" alt="">
+                    <img src="img/header/03.png" alt="">
                     <a href="" class="header__link">Главная</a>
                 </div>
                 <div class="splitter__white"></div>
