--- a/app/components/index/about-company-block.html
+++ b/app/components/index/about-company-block.html
@@ -79,7 +79,7 @@
 </section>
 <section id="@@idScroll" class="main-about page-padding">
     <div class="main-about__doc">
-        <img src="../img/about/01.png" alt="">
+        <img src="img/about/01.png" alt="">
     </div>
     <div class="main-about__info">
         <div class="main-about__title">О компании</div>
