--- a/app/components/index/about-big-company-block.html
+++ b/app/components/index/about-big-company-block.html
@@ -149,7 +149,7 @@
         </ul>
 
         <div class="main-about-big__img">
-            <img src="../img/big_about/01.png" alt="">
+            <img src="img/big_about/01.png" alt="">
         </div>
     </div>
 </section>
