--- a/app/components/index/help-block.html
+++ b/app/components/index/help-block.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <a href="" class="main-help__img">
-            <img src="../img/help/01.png" alt="">
+            <img src="img/help/01.png" alt="">
         </a>
     </div>
 
