created news page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 @import "product-catalog-about";
 @import "spare-parts";
 @import "product-about";
+@import "news";
 
 /*----------------------------------------*/
 .splitter {
