--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -165,18 +165,26 @@
     &:hover {
       @include transform();
     }
+    position: relative;
+    margin-bottom: 2px;
+
   }
 
-  &__sub-menu-item-square {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    @include transition();
-
-    &:hover {
-      @include transform();
+  &__sub-menu-item--square {
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        background-image: url(../img/header/03.png);  
+        height: 7px;
+        width: 7px;
+        bottom: 12px;
+    }
+    a{
+      margin-left: 17px;
     }
   }
+
 
   // .header__link
 
